<?xml version="1.0" encoding="utf-8"?>
<ScrollView    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/reset"
        android:id="@+id/reset"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Team_1"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:textColor="#D32F2F"/>

            <TextView
                android:id="@+id/team_1_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:textColor="#000000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/goal_button_team_1"
                android:text="@string/Goal" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/penalty_button_team_1"
                android:text="@string/penalty" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/red_card_button_team_1"
                android:text="@string/red_card"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/yellow_card_button_team_1"
                android:text="@string/yellow_card"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_margin="10dp"
                android:text="@string/Goal_scored"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                android:id="@+id/goal_value_team_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="10dp"
                android:text="@string/penalties_scored"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                android:id="@+id/penalty_value_team_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="10dp"
                android:text="@string/red_card_received"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                android:id="@+id/red_card_value_team_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="10dp"
                android:text="@string/yellow_card_received"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                android:id="@+id/yellow_card_value_team_1"/>




        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray">

        </View>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Team_2"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:textColor="#D32F2F"/>

            <TextView
                android:id="@+id/team_2_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:textColor="#000000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/goal_button_team_2"
                android:text="@string/Goal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/penalty_button_team_2"
                android:text="@string/penalty" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/red_card_button_team_2"
                android:text="@string/red_card"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/yellow_card_button_team_2"
                android:text="@string/yellow_card"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="10dp"
                android:text="@string/Goal_scored"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                android:id="@+id/goal_value_team_2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="10dp"
                android:text="@string/penalties_scored"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                android:id="@+id/penalty_value_team_2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="10dp"
                android:text="@string/red_card_received"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                android:id="@+id/red_card_value_team_2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="10dp"
                android:text="@string/yellow_card_received"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                android:id="@+id/yellow_card_value_team_2"/>

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>



</ScrollView>